--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "typescript": "^5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "framer-motion": "^10.16.16",
-    "gsap": "^3.12.2",
-    "lenis": "^1.0.42",
-    "lucide-react": "^0.294.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
+    "framer-motion": "^10.16.16",
+    "gsap": "^3.12.2",
+    "lenis": "^1.3.11",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.4",
     "next-sitemap": "^4.2.3",
-    "@radix-ui/react-slot": "^1.0.2"
+    "postcss": "^8",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   },
   "devDependencies": {
     "eslint": "^8",
